# gen-v

./: .gitignore  README.md  [GitHub]_GenV_FeedFlix.ipynb
backend/: .gcloudignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  constants.py  main.py  pyproject.toml  requirements.in  requirements.raw.txt  requirements.txt  requirements_dev.in  requirements_dev.raw.txt  requirements_dev.txt  settings.py
backend/components/: asset_utils.py  firestore_crud.py  gcs_storage.py  vertexai_component.py  video_editing.py
backend/gen_v/: config.py  settings.py
backend/gen_v/models/: __init__.py  media.py  video.py
backend/gen_v/storage/: __init__.py  gcs.py
backend/gen_v/utils/: __init__.py  dates.py  image.py
backend/gen_v/video/: __init__.py  editing.py  generation.py  orchestration.py
backend/mocks/: api_mocks.py  asset_mocks.py  veo_mocks.py
backend/models/: api_models.py  asset_models.py  data_models.py  media.py  veo_models.py  vertexai_models.py
backend/routers/: assets.py  veo.py
backend/tests/: config_test.py  conftest.py  main_test.py  test_top_level_import.py
backend/tests/components/: asset_utils_test.py  firestore_crud_test.py  gcs_storage_test.py  vertexai_component_test.py  video_editing_test.py
backend/tests/mocks/: api_mocks_test.py  veo_mocks_test.py
backend/tests/models/: api_models_test.py  asset_models_test.py  media_models_test.py  media_test.py  vertexai_models_test.py  video_test.py
backend/tests/routers/: assets_test.py  veo_test.py
backend/tests/storage/: gcs_test.py
backend/tests/utils/: dates_test.py  image.py  image_test.py
backend/tests/video/: editing_test.py  generation_test.py  orchestration_test.py
deploy/: cloudbuild-backend.yaml  cloudbuild-frontend.yaml
notebooks/: [GitHub]_GenV_colab.ipynb  (+1 more)
(+87 files in other folders)
