# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtech-gen-v"
version = "1.0.0"
description = """
AI-powered video ads with Veo on Google Cloud, enhanced with AI voice and audio,
and personalised with brand logos, stickers and promo texts.
"""
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/google-marketing-solutions/gen-v/"
Repository = "https://github.com/google-marketing-solutions/gen-v/"

[tool.setuptools]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
optional-dependencies = {dev = {file = ["requirements_dev.in"]}}

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
pyink-indentation = 2
pyink-use-majority-quotes = true
unstable = true
